--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-d3-speedometer",
-  "version": "0.12.0",
+  "name": "@uplab/react-d3-speedometer",
+  "version": "0.13.0",
   "description": "React D3 Speedometer Component",
   "author": {
     "name": "palerdot",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/palerdot/react-d3-speedometer.git"
+    "url": "https://github.com/UpLab/react-d3-speedometer.git"
   },
   "bugs": {
     "url": "https://github.com/palerdot/react-d3-speedometer/issues"
@@ -28,7 +28,6 @@
     "lint": "prettier -l **/src/**/*.js",
     "lintfix": "prettier --write **/src/**/*.js",
     "testonly": "jest",
-    "test": "npm run lint && npm run testonly",
     "test-watch": "npm run testonly -- --watch --watch-extensions js",
     "storybook": "start-storybook -p 9010",
     "publish-storybook": "bash .scripts/publish_storybook.sh",
